# velox-core

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: commands.rs  error.rs  main.rs  scanner.rs  state.rs  types.rs
src/components/: EmptyState.tsx  FileExplorer.tsx  ProgressPanel.tsx  ScannerPanel.tsx  StatsPanel.tsx  StatusBar.tsx  TitleBar.tsx  index.ts
src/lib/: index.ts  ipc.ts
src/store/: index.ts  veloxStore.ts
src/styles/: globals.css
src/types/: index.ts  velox.ts
