[package]
name = "velox-core"
version = "0.1.0"
description = "VELOX CORE - Performance-First Hybrid Desktop Engine"
authors = ["Velox Engineering"]
license = "MIT"
repository = "https://github.com/velox-core/velox-core"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-all", "fs-all", "shell-open", "path-all", "global-shortcut-all", "window-all", "devtools", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
human_bytes = "0.4"
hostname = "0.3"
num_cpus = "1.16"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

